--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1>Baper bank</h1>
+    <header>
+      <h1 class="mt-6 text-5xl text-center">
+        Welcome to
+        <span class="font-semibold text-center text-violet-600">Baper bank</span
+        >!!!
+      </h1>
+    </header>
+    <main>
+      <section class="w-9/12 p-8 mx-auto mt-12 bg-blue-100">
+        <h3 class="mb-4 text-3xl font-medium">Please Login</h3>
+        <div>
+          <input
+            class="block w-9/12 px-3 mb-2"
+            type="email"
+            placeholder="Enter Your Email Address"
+          />
+          <input
+            class="block w-9/12 px-3 mb-2"
+            type="password"
+            name=""
+            id=""
+            placeholder="Enter Your Password"
+          />
+          <button
+            class="px-8 py-2 font-medium text-white rounded-lg btn bg-amber-600 hover:bg-amber-500"
+          >
+            Submit
+          </button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
