--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
             class="block w-9/12 px-3 mb-2"
             type="email"
             placeholder="Enter Your Email Address"
+            id="user-email"
           />
           <input
             class="block w-9/12 px-3 mb-2"
             type="password"
             name=""
-            id=""
             placeholder="Enter Your Password"
+            id="user-password"
           />
           <button
             class="px-8 py-2 font-medium text-white rounded-lg btn bg-amber-600 hover:bg-amber-500"
+            id="btn-submit"
           >
             Submit
           </button>
         </div>
       </section>
     </main>
+    <script src="login.js"></script>
   </body>
 </html>
