--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </div>
       </section>
     </main>
-    <script src="login.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
