--- a/bank.html
+++ b/bank.html
@@ -19,7 +19,7 @@
         <div class="grid w-9/12 grid-cols-3 gap-4 mx-auto">
           <div class="p-8 bg-green-500 rounded-xl">
             <h4 class="text-2xl text-white">Deposit</h4>
-            <h2 class="text-5xl text-white" id="deposit-total">$00</h2>
+            <h2 class="text-5xl text-white" id="deposit-total">00</h2>
           </div>
           <div class="p-8 bg-yellow-500 rounded-xl">
             <h4 class="text-2xl text-white">Withdraw</h4>
@@ -27,7 +27,9 @@
           </div>
           <div class="p-8 bg-violet-500 rounded-xl">
             <h4 class="text-2xl text-white">Balance</h4>
-            <h2 class="text-5xl text-white">$1240</h2>
+            <h2 class="text-5xl text-white">
+              $<span id="balance-total">1240</span>
+            </h2>
           </div>
         </div>
       </section>
